refactor(api): update gateway service types references and tests (#3019)
