# docs/swagger/gen/user/v1/swagger.yaml
@@ -249,11 +249,9 @@ components:
                     description: 箱の占有率
                     type: integer
                 size:
-                    description: 箱のサイズ
-                    type: integer
+                    $ref: '#/components/schemas/types.ShippingSize'
                 type:
-                    description: 箱の種別
-                    type: integer
+                    $ref: '#/components/schemas/types.ShippingType'
             type: object
         types.CartItem:
             properties:
@@ -351,6 +349,33 @@ components:
                 paymentMethod:
                     description: 支払い方法
                     type: integer
+                    x-enum-comments:
+                        PaymentMethodTypeAUPay: QR決済（au PAY）
+                        PaymentMethodTypeBankTransfer: 銀行振込決済
+                        PaymentMethodTypeCash: 代引支払い
+                        PaymentMethodTypeCreditCard: クレジットカード決済
+                        PaymentMethodTypeFree: 決済無し
+                        PaymentMethodTypeKonbini: コンビニ決済
+                        PaymentMethodTypeLinePay: QR決済（LINE Pay）
+                        PaymentMethodTypeMerpay: QR決済（メルペイ）
+                        PaymentMethodTypePaidy: ペイディ（Paidy）
+                        PaymentMethodTypePayEasy: ペイジー（Pay-easy）
+                        PaymentMethodTypePayPay: QR決済（PayPay）
+                        PaymentMethodTypeRakutenPay: QR決済（楽天ペイ）
+                    x-enum-varnames:
+                        - PaymentMethodTypeUnknown
+                        - PaymentMethodTypeCash
+                        - PaymentMethodTypeCreditCard
+                        - PaymentMethodTypeKonbini
+                        - PaymentMethodTypeBankTransfer
+                        - PaymentMethodTypePayPay
+                        - PaymentMethodTypeLinePay
+                        - PaymentMethodTypeMerpay
+                        - PaymentMethodTypeRakutenPay
+                        - PaymentMethodTypeAUPay
+                        - PaymentMethodTypeFree
+                        - PaymentMethodTypePaidy
+                        - PaymentMethodTypePayEasy
                 preschoolCount:
                     description: 幼児人数
                     maximum: 99
@@ -405,8 +430,7 @@ components:
                 creditCard:
                     $ref: '#/components/schemas/types.CheckoutCreditCard'
                 paymentMethod:
-                    description: 支払い方法
-                    type: integer
+                    $ref: '#/components/schemas/types.PaymentMethodType'
                 promotionCode:
                     description: プロモーションコード
                     type: string
@@ -1073,6 +1097,16 @@ components:
                     description: ユーザー名
                     type: string
             type: object
+        types.ExperienceReviewReactionType:
+            description: リアクション種別
+            type: integer
+            x-enum-comments:
+                ExperienceReviewReactionTypeDislike: いまいち
+                ExperienceReviewReactionTypeLike: いいね
+            x-enum-varnames:
+                - ExperienceReviewReactionTypeUnknown
+                - ExperienceReviewReactionTypeLike
+                - ExperienceReviewReactionTypeDislike
         types.ExperienceReviewResponse:
             properties:
                 review:
@@ -1254,6 +1288,33 @@ components:
                 paymentMethod:
                     description: 支払い方法
                     type: integer
+                    x-enum-comments:
+                        PaymentMethodTypeAUPay: QR決済（au PAY）
+                        PaymentMethodTypeBankTransfer: 銀行振込決済
+                        PaymentMethodTypeCash: 代引支払い
+                        PaymentMethodTypeCreditCard: クレジットカード決済
+                        PaymentMethodTypeFree: 決済無し
+                        PaymentMethodTypeKonbini: コンビニ決済
+                        PaymentMethodTypeLinePay: QR決済（LINE Pay）
+                        PaymentMethodTypeMerpay: QR決済（メルペイ）
+                        PaymentMethodTypePaidy: ペイディ（Paidy）
+                        PaymentMethodTypePayEasy: ペイジー（Pay-easy）
+                        PaymentMethodTypePayPay: QR決済（PayPay）
+                        PaymentMethodTypeRakutenPay: QR決済（楽天ペイ）
+                    x-enum-varnames:
+                        - PaymentMethodTypeUnknown
+                        - PaymentMethodTypeCash
+                        - PaymentMethodTypeCreditCard
+                        - PaymentMethodTypeKonbini
+                        - PaymentMethodTypeBankTransfer
+                        - PaymentMethodTypePayPay
+                        - PaymentMethodTypeLinePay
+                        - PaymentMethodTypeMerpay
+                        - PaymentMethodTypeRakutenPay
+                        - PaymentMethodTypeAUPay
+                        - PaymentMethodTypeFree
+                        - PaymentMethodTypePaidy
+                        - PaymentMethodTypePayEasy
                 preschoolCount:
                     description: 幼児人数
                     maximum: 99
@@ -1316,6 +1377,33 @@ components:
                 paymentMethod:
                     description: 支払い方法
                     type: integer
+                    x-enum-comments:
+                        PaymentMethodTypeAUPay: QR決済（au PAY）
+                        PaymentMethodTypeBankTransfer: 銀行振込決済
+                        PaymentMethodTypeCash: 代引支払い
+                        PaymentMethodTypeCreditCard: クレジットカード決済
+                        PaymentMethodTypeFree: 決済無し
+                        PaymentMethodTypeKonbini: コンビニ決済
+                        PaymentMethodTypeLinePay: QR決済（LINE Pay）
+                        PaymentMethodTypeMerpay: QR決済（メルペイ）
+                        PaymentMethodTypePaidy: ペイディ（Paidy）
+                        PaymentMethodTypePayEasy: ペイジー（Pay-easy）
+                        PaymentMethodTypePayPay: QR決済（PayPay）
+                        PaymentMethodTypeRakutenPay: QR決済（楽天ペイ）
+                    x-enum-varnames:
+                        - PaymentMethodTypeUnknown
+                        - PaymentMethodTypeCash
+                        - PaymentMethodTypeCreditCard
+                        - PaymentMethodTypeKonbini
+                        - PaymentMethodTypeBankTransfer
+                        - PaymentMethodTypePayPay
+                        - PaymentMethodTypeLinePay
+                        - PaymentMethodTypeMerpay
+                        - PaymentMethodTypeRakutenPay
+                        - PaymentMethodTypeAUPay
+                        - PaymentMethodTypeFree
+                        - PaymentMethodTypePaidy
+                        - PaymentMethodTypePayEasy
                 promotionCode:
                     description: プロモーションコード
                     type: string
@@ -1450,8 +1538,7 @@ components:
                     description: 開催開始日時
                     type: integer
                 status:
-                    description: 開催状況
-                    type: integer
+                    $ref: '#/components/schemas/types.ScheduleStatus'
                 thumbnailUrl:
                     description: サムネイルURL
                     type: string
@@ -1553,7 +1640,17 @@ components:
                     description: 箱の占有率
                     type: integer
                 boxSize:
-                    $ref: '#/components/schemas/types.ShippingSize'
+                    description: 箱のサイズ
+                    type: integer
+                    x-enum-comments:
+                        ShippingSize60: 箱のサイズ:60
+                        ShippingSize80: 箱のサイズ:80
+                        ShippingSize100: 箱のサイズ:100
+                    x-enum-varnames:
+                        - ShippingSizeUnknown
+                        - ShippingSize60
+                        - ShippingSize80
+                        - ShippingSize100
                 fulfillmentId:
                     description: 配送情報ID
                     type: string
@@ -1563,7 +1660,17 @@ components:
                 shippingCarrier:
                     $ref: '#/components/schemas/types.ShippingCarrier'
                 shippingType:
-                    $ref: '#/components/schemas/types.ShippingType'
+                    description: 箱の種別
+                    type: integer
+                    x-enum-comments:
+                        ShippingTypeFrozen: 冷凍便
+                        ShippingTypeNormal: 常温・冷蔵便
+                        ShippingTypePickup: 店舗受取
+                    x-enum-varnames:
+                        - ShippingTypeUnknown
+                        - ShippingTypeNormal
+                        - ShippingTypeFrozen
+                        - ShippingTypePickup
                 status:
                     $ref: '#/components/schemas/types.FulfillmentStatus'
                 trackingNumber:
@@ -1592,7 +1699,35 @@ components:
                     description: 割引金額(税込)
                     type: integer
                 methodType:
-                    $ref: '#/components/schemas/types.PaymentMethodType'
+                    description: 支払い方法
+                    type: integer
+                    x-enum-comments:
+                        PaymentMethodTypeAUPay: QR決済（au PAY）
+                        PaymentMethodTypeBankTransfer: 銀行振込決済
+                        PaymentMethodTypeCash: 代引支払い
+                        PaymentMethodTypeCreditCard: クレジットカード決済
+                        PaymentMethodTypeFree: 決済無し
+                        PaymentMethodTypeKonbini: コンビニ決済
+                        PaymentMethodTypeLinePay: QR決済（LINE Pay）
+                        PaymentMethodTypeMerpay: QR決済（メルペイ）
+                        PaymentMethodTypePaidy: ペイディ（Paidy）
+                        PaymentMethodTypePayEasy: ペイジー（Pay-easy）
+                        PaymentMethodTypePayPay: QR決済（PayPay）
+                        PaymentMethodTypeRakutenPay: QR決済（楽天ペイ）
+                    x-enum-varnames:
+                        - PaymentMethodTypeUnknown
+                        - PaymentMethodTypeCash
+                        - PaymentMethodTypeCreditCard
+                        - PaymentMethodTypeKonbini
+                        - PaymentMethodTypeBankTransfer
+                        - PaymentMethodTypePayPay
+                        - PaymentMethodTypeLinePay
+                        - PaymentMethodTypeMerpay
+                        - PaymentMethodTypeRakutenPay
+                        - PaymentMethodTypeAUPay
+                        - PaymentMethodTypeFree
+                        - PaymentMethodTypePaidy
+                        - PaymentMethodTypePayEasy
                 orderedAt:
                     description: 注文日時
                     type: integer
@@ -1726,7 +1861,7 @@ components:
                     type: integer
             type: object
         types.PaymentMethodType:
-            description: 決済手段種別
+            description: 支払い方法
             type: integer
             x-enum-comments:
                 PaymentMethodTypeAUPay: QR決済（au PAY）
@@ -1772,7 +1907,7 @@ components:
         types.PaymentSystem:
             properties:
                 methodType:
-                    description: 決済手段種別
+                    description: 支払い方法
                     type: integer
                     x-enum-comments:
                         PaymentMethodTypeAUPay: QR決済（au PAY）
@@ -2117,6 +2252,16 @@ components:
                     description: ユーザー名
                     type: string
             type: object
+        types.ProductReviewReactionType:
+            description: リアクション種別
+            type: integer
+            x-enum-comments:
+                ProductReviewReactionTypeDislike: いまいち
+                ProductReviewReactionTypeLike: いいね
+            x-enum-varnames:
+                - ProductReviewReactionTypeUnknown
+                - ProductReviewReactionTypeLike
+                - ProductReviewReactionTypeDislike
         types.ProductReviewResponse:
             properties:
                 review:
@@ -2325,7 +2470,19 @@ components:
                     description: 配信開始日時
                     type: integer
                 status:
-                    $ref: '#/components/schemas/types.ScheduleStatus'
+                    description: 開催状況
+                    type: integer
+                    x-enum-comments:
+                        ScheduleStatusArchived: アーカイブ配信
+                        ScheduleStatusClosed: ライブ配信終了
+                        ScheduleStatusLive: ライブ配信中
+                        ScheduleStatusWaiting: ライブ配信前
+                    x-enum-varnames:
+                        - ScheduleStatusUnknown
+                        - ScheduleStatusWaiting
+                        - ScheduleStatusLive
+                        - ScheduleStatusClosed
+                        - ScheduleStatusArchived
                 thumbnailUrl:
                     description: サムネイルURL
                     type: string
@@ -2456,7 +2613,7 @@ components:
                     type: integer
             type: object
         types.ShippingSize:
-            description: 箱の大きさ
+            description: 箱のサイズ
             type: integer
             x-enum-comments:
                 ShippingSize60: 箱のサイズ:60
@@ -2468,7 +2625,7 @@ components:
                 - ShippingSize80
                 - ShippingSize100
         types.ShippingType:
-            description: 配送方法
+            description: 箱の種別
             type: integer
             x-enum-comments:
                 ShippingTypeFrozen: 冷凍便
@@ -2849,16 +3006,14 @@ components:
         types.UpsertExperienceReviewReactionRequest:
             properties:
                 reactionType:
-                    description: リアクション種別
-                    type: integer
+                    $ref: '#/components/schemas/types.ExperienceReviewReactionType'
             required:
                 - reactionType
             type: object
         types.UpsertProductReviewReactionRequest:
             properties:
                 reactionType:
-                    description: リアクション種別
-                    type: integer
+                    $ref: '#/components/schemas/types.ProductReviewReactionType'
             required:
                 - reactionType
             type: object
